--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,24 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Metric Converter
     </ion-title>
+    <ion-label>By: Jonathan Wuntu</ion-label>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-card>
+    <ion-item>
+      <ion-select label="Pilih Metrik" label-placement="floating">
+        <ion-select-option value="panjang">Panjang</ion-select-option>
+        <ion-select-option value="massa">Massa</ion-select-option>
+        <ion-select-option value="waktu">Waktu</ion-select-option>
+        <ion-select-option value="arus_listrik">Arus listrik</ion-select-option>
+        <ion-select-option value="suhu">Suhu</ion-select-option>
+        <ion-select-option value="intensitas_cahaya">Intensitas cahaya</ion-select-option>
+        <ion-select-option value="jumlah_zat">Jumlah zat</ion-select-option>
+      </ion-select>
+    </ion-item>
+  </ion-card>
 </ion-content>
