--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,24 +1,72 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Metric Converter
-    </ion-title>
-    <ion-label>By: Jonathan Wuntu</ion-label>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
+
+  <ion-header [translucent]="true">
+    <ion-toolbar>
+      <ion-title>
+        Metric Converter
+      </ion-title>
+      <ion-label>By: Jonathan Wuntu</ion-label>
+    </ion-toolbar>
+  </ion-header>
+  
   <ion-card>
+    <p>Dari:</p>
     <ion-item>
-      <ion-select label="Pilih Metrik" label-placement="floating">
-        <ion-select-option value="panjang">Panjang</ion-select-option>
-        <ion-select-option value="massa">Massa</ion-select-option>
-        <ion-select-option value="waktu">Waktu</ion-select-option>
-        <ion-select-option value="arus_listrik">Arus listrik</ion-select-option>
-        <ion-select-option value="suhu">Suhu</ion-select-option>
-        <ion-select-option value="intensitas_cahaya">Intensitas cahaya</ion-select-option>
-        <ion-select-option value="jumlah_zat">Jumlah zat</ion-select-option>
+      <ion-select 
+        label="Pilih Metrik" 
+        label-placement="floating" 
+        interface="action-sheet"
+        (ionChange)="handleChange($event)"  
+      > 
+        <ion-select-option *ngFor="let metric of metrics" [value]="metric"> {{ metric.name }}</ion-select-option>
       </ion-select>
     </ion-item>
+
+    <p>Ke:</p>
+    <ion-item>
+      <ion-select 
+        label="--Pilih Satuan"
+        label-placement="floating"
+        [disabled]="checkInput"
+        interface="action-sheet"
+        (ionChange)="getMetricIndex1($event)"
+      >
+        <ion-select-option 
+          *ngFor='let metric of (checkPrincipalAmount == "Panjang" ? lengths : checkPrincipalAmount == "Massa" ? mass : checkPrincipalAmount == "Waktu" ? time : checkPrincipalAmount == "Arus listrik" ? electric_current : temperature)'
+          [value]="metric"
+        > 
+          {{ metric.name }} 
+        </ion-select-option>
+      </ion-select>
+    </ion-item>
+    <ion-item>
+      <ion-select 
+        label="--Pilih Satuan" 
+        label-placement="floating" 
+        [disabled]="checkInput"
+        interface="action-sheet"
+        (ionChange)="getMetricIndex2($event)"
+      >
+        <ion-select-option 
+          *ngFor='let metric of (checkPrincipalAmount == "Panjang" ? lengths : checkPrincipalAmount == "Massa" ? mass : checkPrincipalAmount == "Waktu" ? time : checkPrincipalAmount == "Arus listrik" ? electric_current : temperature)' 
+          [value]="metric"
+        > 
+          {{ metric.name }} 
+        </ion-select-option>
+      </ion-select>
+    </ion-item>
+    <ion-item>
+      <ion-input 
+        label="Input nilai" 
+        type="number"
+        labelPlacement="floating"
+        (ionChange)="calculateResult($event)"
+      >
+      </ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input label="Hasil" [readonly]="true" value="{{ result }}"></ion-input>
+    </ion-item>
   </ion-card>
+
 </ion-content>
