--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,32 +1,14 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+//Catpuccin Mocha template colors
+ion-content {
+  --ion-background-color: #1e1e2e;
+  --ion-text-color: #cdd6f4;
 }
 
 ion-header {
   text-align: center;
+}
+
+p {
+  color: #bac2de;
 }
 
